force-app/main/default/objects/Quote/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Box will be checked if the variation is active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>