force-app/main/default/objects/Quote/fields/Additional_Legal_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Legal_Information__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Legal Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>