force-app/main/default/objects/Quote/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Loyalty commercial field which gets value from Opportunity &quot;Proposed Revenue Amount&quot; standard field</description>
    <inlineHelpText>Total amount of potential contract</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>