force-app/main/default/objects/Quote/fields/Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Required__c</fullName>
    <description>Freight Implementation: It will be used for the Approval Levels to be used for the Approval Request</description>
    <inlineHelpText>Please check the Policy snapshot available on the approval sub tab,</inlineHelpText>
    <label>Approval Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approval Level - 1</fullName>
            </value>
            <value>
                <fullName>Approval Level - 2</fullName>
            </value>
            <value>
                <fullName>Approval Level - 3</fullName>
            </value>
            <value>
                <fullName>Approval Level - 4</fullName>
            </value>
            <value>
                <fullName>Approval Level - 5</fullName>
            </value>
            <value>
                <fullName>No Approval Required</fullName>
            </value>
            <value>
                <fullName>Approval Step - 4</fullName>
                <isActive>false</isActive>
                <label>Approval Step - 4</label>
            </value>
            <value>
                <fullName>Approval Step - 5</fullName>
                <isActive>false</isActive>
                <label>Approval Step - 5</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>