force-app/main/default/objects/Quote/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <label>Approval Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>