force-app/main/default/objects/Quote/fields/Approval_Submission__c.field-meta.xml
<CustomField>
    <fullName>Approval_Submission__c</fullName>
    <description>To punch in the date using process flow when approval is submitted.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Approval Submission</label>
    <type>Date</type>
</CustomField>