force-app/main/default/objects/Quote/fields/Assumed_Tag_Rate_at_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Assumed_Tag_Rate_at_Maturity__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Tag rate at the height of program</inlineHelpText>
    <label>Assumed Tag Rate at Maturity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>