force-app/main/default/objects/Quote/fields/AutorabitExtId__c.field-meta.xml
<CustomField>
    <fullName>AutorabitExtId__c</fullName>
    <description>External Id created by AutoRABIT</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>AutorabitExtId__c</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>