force-app/main/default/objects/Quote/fields/Average_Annual_Spend_Per_Customer__c.field-meta.xml
<CustomField>
    <fullName>Average_Annual_Spend_Per_Customer__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Estimated average annual spend of partnership</inlineHelpText>
    <label>Average Annual Spend Per Customer</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>