force-app/main/default/objects/Quote/fields/Contract_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relating object to the contract &amp; agreement object</description>
    <label>Contract &amp; Agreement</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>