force-app/main/default/objects/Quote/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>[QLSF-330] Loyalty: Created so that user can provide End Date which can be populated in Contract and Agreement whenever created.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>