force-app/main/default/objects/Quote/fields/Contract_From_Button_Technical__c.field-meta.xml
<CustomField>
    <fullName>Contract_From_Button_Technical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[QLSF-332] Loyalty: Toggle when Contract is created from Create Contract button.</description>
    <label>Contract From Button (Technical)</label>
    <type>Checkbox</type>
</CustomField>