force-app/main/default/objects/Quote/fields/Do_not_Send_Quote__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Send_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CRM-10075</description>
    <label>Do-not-Send Quote</label>
    <type>Checkbox</type>
</CustomField>