force-app/main/default/objects/Quote/fields/Engine__c.field-meta.xml
<CustomField>
    <fullName>Engine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Engine</description>
    <label>Engine</label>
    <type>Checkbox</type>
</CustomField>