force-app/main/default/objects/Quote/fields/Freight_Category__c.field-meta.xml
<CustomField>
    <fullName>Freight_Category__c</fullName>
    <description>Freight Implementation: It is auto populating based on Category on Opportunity</description>
    <formula>TEXT(Opportunity.Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Category</label>
    <type>Text</type>
</CustomField>