force-app/main/default/objects/Quote/fields/Freight_Email__c.field-meta.xml
<CustomField>
    <fullName>Freight_Email__c</fullName>
    <description>Freight Implementation: It is being used for Template copying Email of the Contact.</description>
    <formula>Opportunity.Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>