force-app/main/default/objects/Quote/fields/Freight_Phone__c.field-meta.xml
<CustomField>
    <fullName>Freight_Phone__c</fullName>
    <formula>Opportunity.Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>