force-app/main/default/objects/Quote/fields/History_Track_Date__c.field-meta.xml
<CustomField>
    <fullName>History_Track_Date__c</fullName>
    <description>This field is used to track the date when status was changed to presented. Created as a part of CRM-6729</description>
    <formula>IF(  AND( BillingCountry = &apos;AU&apos;,ISPICKVAL(Status, &apos;Presented&apos;))  ,  DATEVALUE( LastModifiedDate ), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>History Track Date</label>
    <type>Date</type>
</CustomField>