force-app/main/default/objects/Quote/fields/Minimum_Spend_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Spend_Commitment__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Minimum spend required of partnership</inlineHelpText>
    <label>Minimum Spend Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>