force-app/main/default/objects/Quote/fields/Model_number__c.field-meta.xml
<CustomField>
    <fullName>Model_number__c</fullName>
    <description>Model Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Model Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>