force-app/main/default/objects/Quote/fields/Oversized__c.field-meta.xml
<CustomField>
    <fullName>Oversized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Oversized</description>
    <inlineHelpText>Does this shipment exceed the dimensions on a PGA?</inlineHelpText>
    <label>Does this shipment exceed dims of a PGA?</label>
    <type>Checkbox</type>
</CustomField>