force-app/main/default/objects/Quote/fields/Points_Per__c.field-meta.xml
<CustomField>
    <fullName>Points_Per__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Points issued per $</inlineHelpText>
    <label>Points Per $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>