force-app/main/default/objects/Quote/fields/Program_Fee__c.field-meta.xml
<CustomField>
    <fullName>Program_Fee__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Additional cost to partner for signing up to a program</inlineHelpText>
    <label>Program Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>