force-app/main/default/objects/Quote/fields/Proposed_Term_of_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Term_of_Agreement__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Term that the contract will observe</inlineHelpText>
    <label>Proposed Term of Agreement</label>
    <type>TextArea</type>
</CustomField>