force-app/main/default/objects/Quote/fields/Ramp_up_factor__c.field-meta.xml
<CustomField>
    <fullName>Ramp_up_factor__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Percentage of ramp up discount</inlineHelpText>
    <label>Ramp up factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>