force-app/main/default/objects/Quote/fields/Rate_Valid_after_acceptance_until__c.field-meta.xml
<CustomField>
    <fullName>Rate_Valid_after_acceptance_until__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Valid after acceptance until</label>
    <required>true</required>
    <type>Date</type>
</CustomField>