force-app/main/default/objects/Quote/fields/Rebates_and_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Rebates_and_Payment_Terms__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Rebates and Payment Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>