force-app/main/default/objects/Quote/fields/Sky_Pallet_ID__c.field-meta.xml
<CustomField>
    <fullName>Sky_Pallet_ID__c</fullName>
    <description>Freight: Alpha Numeric unique identifier from Sky Pallet system to link the opportunity/quote with the transaction and to ensure users are using both systems.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please ensure you copy over the sky pallet id on this quote record.</inlineHelpText>
    <label>Sky Pallet ID</label>
    <length>24</length>
    <type>Text</type>
</CustomField>