force-app/main/default/objects/Quote/fields/Specs_template_attached__c.field-meta.xml
<CustomField>
    <fullName>Specs_template_attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specs template attached</description>
    <label>Specs template attached</label>
    <type>Checkbox</type>
</CustomField>