force-app/main/default/objects/Quote/fields/Stand_Number__c.field-meta.xml
<CustomField>
    <fullName>Stand_Number__c</fullName>
    <description>Stand Number</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stand number on which the engine is mounted for transportation</inlineHelpText>
    <label>Stand Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>