force-app/main/default/objects/Quote/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Loyalty commercial field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the contract will start</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>