force-app/main/default/objects/Quote/fields/Total_Program_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Program_Amount__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Total cost of program</inlineHelpText>
    <label>Total Program Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>