force-app/main/default/objects/Quote/fields/Turnover__c.field-meta.xml
<CustomField>
    <fullName>Turnover__c</fullName>
    <description>Loyalty commercial field</description>
    <inlineHelpText>Average spend per partner</inlineHelpText>
    <label>Turnover</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>