force-app/main/default/objects/Quote/recordTypes/Agency_Partnerships.recordType-meta.xml
<RecordType>
    <fullName>Agency_Partnerships</fullName>
    <active>true</active>
    <label>Agency Partnerships</label>
</RecordType>