force-app/main/default/objects/Quote/recordTypes/Freight_Quote.recordType-meta.xml
<RecordType>
    <fullName>Freight_Quote</fullName>
    <active>true</active>
    <description>This record type for Freight related Quote</description>
    <label>Freight_Quote</label>
</RecordType>