force-app/main/default/objects/Quote/recordTypes/Loyalty_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Loyalty_Commercial</fullName>
    <active>true</active>
    <description>A loyalty commercial quote</description>
    <label>Loyalty Commercial</label>
</RecordType>