force-app/main/default/objects/Quote/validationRules/Freight_Engine_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Freight_Engine_mandatory</fullName>
    <active>true</active>
    <description>Freight - Engine mandatory when engine is ticked</description>
    <errorConditionFormula>AND( 

Opportunity.RecordType.DeveloperName == &quot;Freight&quot;, 
RecordType.DeveloperName = &quot;Freight_Quote&quot;, 
ISBLANK( Model_number__c ) == True,
Engine__c == True

 
)</errorConditionFormula>
    <errorDisplayField>Model_number__c</errorDisplayField>
    <errorMessage>If the quote is for an Engine as reflective by the tick on Engine flag, its mandatory for you to supply the Engine number and would be great if Stand number is also supplied.</errorMessage>
</ValidationRule>