force-app/main/default/objects/Quote/listViews/My_Quotes.listView-meta.xml
<ListView>
    <fullName>My_Quotes</fullName>
    <columns>QUOTE.QUOTENUMBER</columns>
    <columns>QUOTE.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Freight_Category__c</columns>
    <columns>QUOTE.EXPIRATIONDATE</columns>
    <columns>QUOTE.STATUS</columns>
    <columns>QUOTE.TOTALPRICE</columns>
    <filterScope>Mine</filterScope>
    <label>My Quotes</label>
</ListView>